--- a/scrapymeals/scrapy.cfg
+++ b/scrapymeals/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = scrapy_meals.settings
+default = settings
 
 [deploy]
 #url = http://localhost:6800/
-project = scrapy_meals
+project = scrapymeals
